--- a/roles/yoda_rulesets/templates/rules_uu.cfg.j2
+++ b/roles/yoda_rulesets/templates/rules_uu.cfg.j2
@@ -23,6 +23,8 @@ notifications_reply_to         = '{{ notifications_reply_to }}'
 smtp_server                    = '{{ smtp_server }}'
 smtp_username                  = '{{ smtp_username }}'
 smtp_password                  = '{{ smtp_password }}'
+smtp_auth                      = '{{ smtp_auth }}'
+smtp_starttls                  = '{{ smtp_starttls }}'
 
 datacite_rest_api_url          = 'https://{{ datacite_rest_api_url }}'
 datacite_username              = '{{ datacite_username }}'
